unpackaged/main/default/objects/SubscriptionLine__c/SubscriptionLine__c.object-meta.xml
<CustomObject>
    <label>Subscription Line</label>
    <nameField>
        <label>Load Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Subscription Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>