unpackaged/main/default/objects/SubscriptionLine__c/fields/Cancellation__c.field-meta.xml
<CustomField>
    <fullName>Cancellation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cancellation</label>
    <referenceTo>Cancellation__c</referenceTo>
    <relationshipLabel>Subscription Lines</relationshipLabel>
    <relationshipName>SubscriptionLines</relationshipName>
    <type>Lookup</type>
</CustomField>