unpackaged/main/default/objects/SubscriptionLine__c/fields/CancellationDate__c.field-meta.xml
<CustomField>
    <fullName>CancellationDate__c</fullName>
    <label>Cancellation Date</label>
    <type>Date</type>
</CustomField>