unpackaged/main/default/objects/SubscriptionLine__c/fields/CustomerRequest__c.field-meta.xml
<CustomField>
    <fullName>CustomerRequest__c</fullName>
    <label>Customer Request</label>
    <referenceTo>CustomerRequest__c</referenceTo>
    <relationshipLabel>Subscription Lines</relationshipLabel>
    <relationshipName>SubscriptionLines</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>