unpackaged/main/default/objects/SubscriptionLine__c/fields/NewQuantity__c.field-meta.xml
<CustomField>
    <fullName>NewQuantity__c</fullName>
    <formula>Quantity__c - QuantityCancelled__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>New Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>