unpackaged/main/default/objects/SubscriptionLine__c/fields/SubscriptionNumber__c.field-meta.xml
<CustomField>
    <fullName>SubscriptionNumber__c</fullName>
    <label>Subscription Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>