unpackaged/main/default/objects/SubscriptionLine__c/fields/ThirdPartyDelivered__c.field-meta.xml
<CustomField>
    <fullName>ThirdPartyDelivered__c</fullName>
    <label>Third Party Delivered</label>
    <length>255</length>
    <type>Text</type>
</CustomField>