unpackaged/main/default/objects/SubscriptionLine__c/validationRules/VR01_EndDateBeforeNextRenewalDate.validationRule-meta.xml
<ValidationRule>
    <fullName>VR01_EndDateBeforeNextRenewalDate</fullName>
    <active>false</active>
    <errorConditionFormula>CancellationDate__c &lt; NextDateRenewal__c</errorConditionFormula>
    <errorDisplayField>CancellationDate__c</errorDisplayField>
    <errorMessage>La date de fin ne peut pas être antérieure à la date de renouvellement.</errorMessage>
</ValidationRule>