unpackaged/main/default/objects/SubscriptionLine__c/validationRules/VR02_ControlOnCreation.validationRule-meta.xml
<ValidationRule>
    <fullName>VR02_ControlOnCreation</fullName>
    <active>true</active>
    <errorConditionFormula>OR(
    ISBLANK(CancellationDate__c),
    ISBLANK(QuantityCancelled__c)
)</errorConditionFormula>
    <errorMessage>You can't save the line without a cancellation date or a quantity</errorMessage>
</ValidationRule>